--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
         <div class="page-header">
             <h1><i class="fa-solid fa-scale-balanced"></i> Adv. Niranjan V. Pawar <span class="pro-plus"></span></h1>
-            <p class="tagline"><i class="fa-solid fa-gavel"></i> Empowering Justice, Building Trust</p>
+            <p class="tagline"><i class="fa-solid fa-gavel"></i>Empowering Ownership, Navigating Deals</p>
         </div>
 
         <div id="notificationArea" class="notification-area" role="alert" aria-live="assertive">
